--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <ul class="menuLinks">
     <li class="active" id="firstLink"><a href="#home" class="scroll-link">Home</a></li>
     <li><a href="#services" class="scroll-link">Subjects</a></li>
-    <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
+    <li><a href="#aboutUs" class="scroll-link">Our Vision</a></li>
     <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
   </ul>
 </nav>
